...

    data class City(val name: String, val latitude: Double, val longitude: Double)
    val cities = listOf(
        City("Jakarta", -6.2088, 106.8456),
        City("Bandung", -6.9175, 107.6191),
        City("Surabaya", -7.2575, 112.7521),
        City("Yogyakarta", -7.7956, 110.3695),
        City("Medan", 3.5952, 98.6722),
        City("Makassar", -5.1477, 119.4327),
        City("Bali", -8.3405, 115.0920),
    )

    fun fetchWeather(city: City) {
...
